--- a/_posts/2023-11-21-eidas.md
+++ b/_posts/2023-11-21-eidas.md
@@ -13,7 +13,7 @@ header:
   og_image: /assets/images/posts/article-eidas.jpg
 ---
 
-![](/assets/images/article-eidas.jpg)
+![article-eidas](/assets/images/article-eidas.jpg)
 
 This article, like ["Echoes from History: Designing Self-Sovereign Identity with Care"](https://www.blockchaincommons.com/articles/echoes-history/), is drawn from a book I have in process called FOREMEMBRANCE, which chronicles how identity was abused in WWII and how those dangers linger to the present day._
 
@@ -27,7 +27,7 @@ It is disturbingly ironic that six days later, on November 22nd, Geert Wilders r
 
 ## Two Roads Diverged
 
-<img src="/assets/images/two-paths.jpg" width="350" style="float: right">
+<img src="/assets/images/two-paths.jpg" width="350" style="float: right" alt="two-paths">
 
 
 The digital world is a new frontier, and like all frontiers it has enjoyed waves of migrations. First came the pioneers: rugged individuals who set their own norms and created their own communities. Then came the corporations: companies intent on monetizing that frontier. Last came the governments: existing authorities intent on setting their own rules and regulations for this new world.
