--- a/_posts/2024-10-16-cliques-2.md
+++ b/_posts/2024-10-16-cliques-2.md
@@ -20,7 +20,7 @@ _Traditionally, identity models have focused on the nodes, but in [Musings of a 
 _My first look at cliques focused on the technical definition, which requires that cliques be "closed", meaning that there's a relationship between every pair in the group and that those pairwise edges form the clique identity among them._
 
 <center>
-  <img src="/assets/images/cliques/cliques-4.png" width="40%" height="40%">
+  <img src="/assets/images/cliques/cliques-4.png" alt="cliques-4" width="40%" height="40%">
 </center>
 <br>
 
@@ -37,7 +37,7 @@ Open cliques support different sorts of modeling, for groups where not everyone 
 For example, Bob might not actually have a close or independent relationship with his mother-in-law, Anna, while Mary's best friend from college, Beth, might join the clique when she stays with the family, despite the fact that she only has a real relationship with Mary. (However, more relationships, and thus edges, might develop over time!)
 
 <center>
-  <img src="/assets/images/cliques/cliques-5.png" width="60%" height="60%">
+  <img src="/assets/images/cliques/cliques-5.png" alt="cliques-5" width="60%" height="60%">
 </center>
 <br>
 
@@ -54,7 +54,7 @@ There's one other catch: fuzzy cliques are the one situation where the Relations
 Even for a triadic clique, the privacy implications of using a threshold key to represent the clique are notable.
 
 <center>
-  <img src="/assets/images/cliques/cliques-6.png" width="40%" height="40%">
+  <img src="/assets/images/cliques/cliques-6.png" alt="cliques-6" width="40%" height="40%">
 </center>
 <br>
 
@@ -73,28 +73,28 @@ Thus far, I've largely presumed that relational edges and cryptographic cliques 
 In my first article, I touched upon the idea that a clique could define not just a group, but also a singular person's identity. This could be done using devices. Imagine that a person has a few devices that together form the basis of his digital identity: a hub of information that contains his credentials; a biometric ring that verifies his physical identity, primarily to unlock that hub; and a coordinator that allows a clique-identity to communication with the network. The following diagram shows how our old friend Bob could be defined as an open clique including devices:
 
 <center>
-  <img src="/assets/images/cliques/cliques-7a.png" width="40%" height="40%">
+  <img src="/assets/images/cliques/cliques-7a.png" alt="cliques-7a" width="40%" height="40%">
 </center>
 <br>
 
 Using the clique-of-cliques model, *this* then might be the identity that's linked in with Mary and Joshua to form their triadic nuclear-family clique:
 
 <center>
-  <img src="/assets/images/cliques/cliques-7b.png" width="40%" height="40%">
+  <img src="/assets/images/cliques/cliques-7b.png" alt="cliques-7b" width="40%" height="40%">
 </center>
 <br>
 
 Though these examples suggest a clique where devices and real people are mixed together, that's not the only option. Another example might be a fuzzy clique made up of three automated factcheckers, which are all devices. Together, any two can issue a finding of "TRUE" or "FALSE":
 
 <center>
-  <img src="/assets/images/cliques/cliques-8a.png" width="40%" height="40%">
+  <img src="/assets/images/cliques/cliques-8a.png" alt="cliques-8a" width="40%" height="40%">
 </center>
 <br>
 
 Again using the clique-of-cliques model, these fact checkers could then interact with other identities, such as Dan and Ty, who write together. 
 
 <center>
-  <img src="/assets/images/cliques/cliques-8b.png" width="80%" height="80%">
+  <img src="/assets/images/cliques/cliques-8b.png" alt="cliques-8b" width="80%" height="80%">
 </center>
 <br>
 
