--- a/_tweets-md/2013/2013-01-01-tweets.md
+++ b/_tweets-md/2013/2013-01-01-tweets.md
@@ -6,22 +6,22 @@ time: 23:59:59 +0000
 
 > Glad to see the sustainable MBA @BGIedu Organizational Change class using the #bgimgt579 hashtag this quarter.
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 20 17:22:27 +0000 2013](https://twitter.com/ChristopherA/status/293045839855767552)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" alt="" width="30" /> [Sun Jan 20 17:22:27 +0000 2013](https://twitter.com/ChristopherA/status/293045839855767552)
 
 ----
 
 > qotd: "When young you think life is a sprint. When older you see it's a marathon. And when mature you see it's a relay race."—Doc Searls
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 21 10:54:15 +0000 2013](https://twitter.com/ChristopherA/status/293310533963227137)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Mon Jan 21 10:54:15 +0000 2013](https://twitter.com/ChristopherA/status/293310533963227137)
 
 ----
 
 > I’m hoping to meet at #macworld #iOS Devs that are interested in alternatives to OpenIn &amp; some way to pass resulting data back to my app.
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 31 17:41:48 +0000 2013](https://twitter.com/ChristopherA/status/297036974450155520)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Thu Jan 31 17:41:48 +0000 2013](https://twitter.com/ChristopherA/status/297036974450155520)
 
 ----
 
 > #qotd (quote of the day) “In our society, we listen to reply, not to understand.” @will.i.am at #macworld [unfortunately too true!]
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 31 19:54:10 +0000 2013](https://twitter.com/ChristopherA/status/297070285746761729)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Thu Jan 31 19:54:10 +0000 2013](https://twitter.com/ChristopherA/status/297070285746761729)
