--- a/_tweets-md/2013/2013-06-01-tweets.md
+++ b/_tweets-md/2013/2013-06-01-tweets.md
@@ -6,7 +6,7 @@ time: 23:59:59 +0000
 
 > On my way to Seattle to teach last “Digital Influence” class and to see my students graduate with their @BGIedu MBA in Sustainable Systems.
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 16:34:30 +0000 2013](https://twitter.com/ChristopherA/status/342318523617538048)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Wed Jun 05 16:34:30 +0000 2013](https://twitter.com/ChristopherA/status/342318523617538048)
 
 ----
 
@@ -15,16 +15,16 @@ time: 23:59:59 +0000
 > “All of us are beginners. Some of us have been practicing longer.”  
 > —Kathy Dee @Brooklyngem
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 06 01:58:06 +0000 2013](https://twitter.com/ChristopherA/status/342460356196704256)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Thu Jun 06 01:58:06 +0000 2013](https://twitter.com/ChristopherA/status/342460356196704256)
 
 ----
 
 > @gte Re: blog comixology—I am a graphic novel creator [http://Facebook.com/touched-comic](http://Facebook.com/touched-comic) and iOS developer @InfiniteCanvas—have idea to share and a ?
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 22 22:57:14 +0000 2013](https://twitter.com/ChristopherA/status/348575434402848768)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Sat Jun 22 22:57:14 +0000 2013](https://twitter.com/ChristopherA/status/348575434402848768)
 
 ----
 
 > Off to Vancouver, BC for a Group Pattern Language Steward’s Circle meeting + Group Works Deck [http://bit.ly/15DQEd0](http://bit.ly/15DQEd0) workshop this weekend.
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 02:30:06 +0000 2013](https://twitter.com/ChristopherA/status/349716168229126146)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" alt="x-icon" width="30" /> [Wed Jun 26 02:30:06 +0000 2013](https://twitter.com/ChristopherA/status/349716168229126146)
